Completed third section

--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,23 @@
-<h1> Hello</h1>
+
+
+<html>
+  <body>
+    <ul >
+      <li style="display: inline;"><a href='me.html'>Me</a></li>
+      <li style="display: inline;"> | </li>
+      <li style="display: inline;"><a href='http://google.com'>Google</a></li>
+      <li style="display: inline;"> | </li>
+      <li style="display: inline;"><a href='http://bing.com'>Bing</a></li>
+      <li style="display: inline;"> | </li>
+      <li style="display: inline;"><a href='http://yahoo.com'>Yahoo!</a></li>
+    </ul>
+
+    <hr />
+    <div>
+      <h1> Hello</h1>
 <p>
   The time is now:
-  2014-02-12 03:57:18 -0500
+  2014-02-12 04:13:20 -0500
 </p>
 
 <p>
@@ -9,3 +25,12 @@
   
 </p>
 
+
+    </div>
+    <hr />
+    <div>
+      <h3> I'm a footer</h3>
+      <p>Put things in the footer</p>
+    </div>
+  </body>
+</html>
