--- a/public/me.html
+++ b/public/me.html
@@ -1,1 +1,25 @@
-foo
+
+
+<html>
+  <body>
+    <ul >
+      <li style="display: inline;"><a href='me.html'>Me</a></li>
+      <li style="display: inline;"> | </li>
+      <li style="display: inline;"><a href='http://google.com'>Google</a></li>
+      <li style="display: inline;"> | </li>
+      <li style="display: inline;"><a href='http://bing.com'>Bing</a></li>
+      <li style="display: inline;"> | </li>
+      <li style="display: inline;"><a href='http://yahoo.com'>Yahoo!</a></li>
+    </ul>
+
+    <hr />
+    <div>
+      foo
+    </div>
+    <hr />
+    <div>
+      <h3> I'm a footer</h3>
+      <p>Put things in the footer</p>
+    </div>
+  </body>
+</html>
