--- a/public/yes.html
+++ b/public/yes.html
@@ -1,4 +1,20 @@
-<div style="border: 2px solid black;">
+
+
+<html>
+  <body>
+    <ul >
+      <li style="display: inline;"><a href='me.html'>Me</a></li>
+      <li style="display: inline;"> | </li>
+      <li style="display: inline;"><a href='http://google.com'>Google</a></li>
+      <li style="display: inline;"> | </li>
+      <li style="display: inline;"><a href='http://bing.com'>Bing</a></li>
+      <li style="display: inline;"> | </li>
+      <li style="display: inline;"><a href='http://yahoo.com'>Yahoo!</a></li>
+    </ul>
+
+    <hr />
+    <div>
+      <div style="border: 2px solid black;">
 <h1> Chancethegreat </h1>
 
 <h3> This is a page about me and my accomplishments </h3>
@@ -16,3 +32,12 @@
 </ul>
 
 
+
+    </div>
+    <hr />
+    <div>
+      <h3> I'm a footer</h3>
+      <p>Put things in the footer</p>
+    </div>
+  </body>
+</html>
