--- a/public/index.html
+++ b/public/index.html
@@ -14,10 +14,10 @@
 
     <hr />
     <div>
-      <h1> Hello</h1>
+      <h1> Hello, Chancelor</h1>
 <p>
   The time is now:
-  2014-02-12 04:13:20 -0500
+  2014-02-12 08:44:03 -0500
 </p>
 
 <p>
